
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int FILE ;


 int BSIZE ;
 char* FNAME ;
 int * buff ;
 int err_exit (char*) ;
 int fclose (int *) ;
 int * fopen (char*,char*) ;
 int fputc (int ,int *) ;
 int printf (char*,char*,int) ;

void buildfile()
{
int i=0;
FILE *fd;

if ((fd=fopen(FNAME,"wb"))==((void*)0)) {
err_exit("-> Failed to generate file...");
}

for(;i<BSIZE;i++) {
fputc(buff[i],fd);
}

fclose(fd);

printf("-> '%s' generated. (%d bytes)\n",FNAME,i);

}
