; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/windows/dos/extr_1116.c_buildfile.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/windows/dos/extr_1116.c_buildfile.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@FNAME = common dso_local global i8* null, align 8
@.str = private unnamed_addr constant [3 x i8] c"wb\00", align 1
@.str.1 = private unnamed_addr constant [30 x i8] c"-> Failed to generate file...\00", align 1
@BSIZE = common dso_local global i32 0, align 4
@buff = common dso_local global i32* null, align 8
@.str.2 = private unnamed_addr constant [31 x i8] c"-> '%s' generated. (%d bytes)\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @buildfile() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32*, align 8
  store i32 0, i32* %1, align 4
  %3 = load i8*, i8** @FNAME, align 8
  %4 = call i32* @fopen(i8* %3, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str, i64 0, i64 0))
  store i32* %4, i32** %2, align 8
  %5 = icmp eq i32* %4, null
  br i1 %5, label %6, label %8

6:                                                ; preds = %0
  %7 = call i32 @err_exit(i8* getelementptr inbounds ([30 x i8], [30 x i8]* @.str.1, i64 0, i64 0))
  br label %8

8:                                                ; preds = %6, %0
  br label %9

9:                                                ; preds = %21, %8
  %10 = load i32, i32* %1, align 4
  %11 = load i32, i32* @BSIZE, align 4
  %12 = icmp slt i32 %10, %11
  br i1 %12, label %13, label %24

13:                                               ; preds = %9
  %14 = load i32*, i32** @buff, align 8
  %15 = load i32, i32* %1, align 4
  %16 = sext i32 %15 to i64
  %17 = getelementptr inbounds i32, i32* %14, i64 %16
  %18 = load i32, i32* %17, align 4
  %19 = load i32*, i32** %2, align 8
  %20 = call i32 @fputc(i32 %18, i32* %19)
  br label %21

21:                                               ; preds = %13
  %22 = load i32, i32* %1, align 4
  %23 = add nsw i32 %22, 1
  store i32 %23, i32* %1, align 4
  br label %9

24:                                               ; preds = %9
  %25 = load i32*, i32** %2, align 8
  %26 = call i32 @fclose(i32* %25)
  %27 = load i8*, i8** @FNAME, align 8
  %28 = load i32, i32* %1, align 4
  %29 = call i32 @printf(i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str.2, i64 0, i64 0), i8* %27, i32 %28)
  ret void
}

declare dso_local i32* @fopen(i8*, i8*) #1

declare dso_local i32 @err_exit(i8*) #1

declare dso_local i32 @fputc(i32, i32*) #1

declare dso_local i32 @fclose(i32*) #1

declare dso_local i32 @printf(i8*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
